--- a/MyPortfolio/index.html
+++ b/MyPortfolio/index.html
@@ -53,15 +53,13 @@
         <h3>i am</h3>
         <h3><span> Monowara Tabassum Maisha </span></h3>
         <p class="text">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias quidem
-          excepturi natus iste ut. Alias, quod? Earum pariatur obcaecati
-          dolorum!
+         i am pursuing mu undergraduate degree from university of asia pacific
         </p>
         <a href="#about" class="btn">about me</a>
       </div>
 
       <div class="image">
-        <img src="images/2.jpg" alt="Image can't load" />
+        <img src="images/1.jpg" alt="Image can't load" />
       </div>
     </section>
 
@@ -79,10 +77,7 @@
 
         <div class="content">
           <h3>my name is Monowara Tabassum Maisha</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi
-            error.
-          </p>
+          
           <div class="box-container">
             <div class="box">
               <p><span> age : </span> 21</p>
